# Ray-Tracing-of-my-Life

./: .gitignore  CMakeLists.txt  README.md  RayTracingofmyLife.sln
RayTracingInOneWeekend/: RayTracingInOneWeekend.vcxproj  RayTracingInOneWeekend.vcxproj.filters  main.cpp
RayTracingInOneWeekend/Object/: aabb.h  bvh.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  sphere.h
RayTracingInOneWeekend/Render/: camera.h  ray.h
RayTracingInOneWeekend/Utils/: color.h  rtweekend.h  vec3.h
RayTracingofmyLife/: RayTracingofmyLife.vcxproj
lib/tbb1/: _test_malloc_atexit_debug.exp  _test_malloc_atexit_debug.lib  _test_malloc_lib_unload_debug.exp  _test_malloc_lib_unload_debug.lib  _test_malloc_used_by_lib_debug.exp  _test_malloc_used_by_lib_debug.lib  tbb12_debug.exp  tbb12_debug.lib  tbbmalloc_debug.exp  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.exp  tbbmalloc_proxy_debug.lib  test_malloc_whitebox.exp  test_malloc_whitebox.lib  vars.bat
lib/tbb2/: _test_malloc_atexit.exp  _test_malloc_atexit.lib  _test_malloc_lib_unload.exp  _test_malloc_lib_unload.lib  _test_malloc_used_by_lib.exp  _test_malloc_used_by_lib.lib  tbb12.exp  tbb12.lib  tbbmalloc.exp  tbbmalloc.lib  tbbmalloc_proxy.exp  tbbmalloc_proxy.lib  test_malloc_whitebox.exp  vars.bat
src/: SandBox.cpp
src/Object/: CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.cpp  bvh.h  constant_medium.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  object.cpp  perlin.h  sphere.h  texture.h
src/Render/: CMakeLists.txt  camera.h  ray.h  render.cpp
src/Utils/: CMakeLists.txt  color.h  rtweekend.h  vec3.h  (+3 more)
